src/objects/BGBK__Payment_Collection_Types__mdt.object
<CustomObject>
    <description>All the details related to Payment Collection type that will be used to create the dynamic component in the Item Search page.</description>
    <fields>
        <fullName>BGBK__Component_Name__c</fullName>
        <description>Specify the name of your custom Visualforce Component name or leave blank for standard searches.</description>
        <inlineHelpText>Specify the name of your custom Visualforce Component name or leave blank for standard searches.</inlineHelpText>
        <label>Component Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Deposit_Fieldset_Name__c</fullName>
        <description>Deposit Fieldset API Name determines what columns are displayed in the Payable Items list to be added to the Items List on the ItemSearch page.</description>
        <inlineHelpText>Deposit Fieldset API Name determines what columns are displayed in the Payable Items list to be added to the Items List on the ItemSearch page. This needs to be set only if deposits need to be listed in the Payable Items.</inlineHelpText>
        <label>Deposit Fieldset Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Fee_Fieldset_Name__c</fullName>
        <description>Fee Fieldset API Name determines what columns are displayed in the Payable Items list to be added to the Items List on the ItemSearch page.</description>
        <inlineHelpText>Fee Fieldset API Name determines what columns are displayed in the Payable Items list to be added to the Items List on the ItemSearch page. This needs to be set only if fees need to be listed in the Payable Items.</inlineHelpText>
        <label>Fee Fieldset Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__Invoice_Fieldset_Name__c</fullName>
        <description>Invoice Fieldset API Name determines what invoice columns are displayed in the Payable Items list to be added to the Items List on the ItemSearch page.</description>
        <inlineHelpText>Invoice Fieldset API Name determines what invoice columns are displayed in the Payable Items list to be added to the Items List on the ItemSearch page. This needs to be set only if invoices need to be listed in the Payable Items.</inlineHelpText>
        <label>Invoice Fieldset Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGBK__IsExactMatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When finding parents records of payment collection items use only exact matches (as opposed to partial matches)</description>
        <inlineHelpText>When finding parents records of payment collection items use only exact matches (as opposed to partial matches)</inlineHelpText>
        <label>Exact Match Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGBK__IsPortalAccessible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow portal users to find parents records of payment collection items</description>
        <inlineHelpText>Allow portal users to find parents records of payment collection items</inlineHelpText>
        <label>Portal Accessible</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Collection Types</label>
    <pluralLabel>Payment Collection Types</pluralLabel>
</CustomObject>